# onnx-llm

./: CMakeLists.txt  README.md
include/: llm.hpp  ortwrapper.hpp
src/: llm.cpp
